--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .containers {
+    @apply container mx-auto max-w-[1280px] px-12;
+  }
+  .view {
+    @apply md:containers mt-6 md:mt-12;
+  }
+}
