--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,8 +11,9 @@
   }
 }
 
-@layer base {
-  body {
-    @apply bg-white;
-  }
+body {
+  scroll-behavior: smooth;
+  box-sizing: border-box;
+  overflow-x: hidden;
+  background-color: white;
 }
